# hyporeddit

./: .env.example  .gitignore  Dockerfile  LICENSE  conftest.py  docker-compose.yml  pyproject.toml  readme.md  whitepaper.md
prompts/: stance_classification_v1.txt  synthesis_v1.txt  translation_v1.txt
src/hyporeddit/: __init__.py  cli.py  config.py
src/hyporeddit/embedding/: __init__.py  adapter.py  bge_m3.py
src/hyporeddit/evaluation/: aggregator.py  display.py  pipeline.py  retriever.py  stance.py  synthesizer.py
src/hyporeddit/ingestion/: chunker.py  filters.py  http_client.py  processor.py  scheduler.py  stats.py
src/hyporeddit/llm/: __init__.py  anthropic.py  base.py  openai_compat.py
src/hyporeddit/models/: evaluation.py  ingestion.py
src/hyporeddit/sources/: base.py  reddit_json.py
src/hyporeddit/storage/: lance.py  sqlite.py  unified.py
src/hyporeddit/translation/: translator.py
tests/unit/: test_smoke.py
tests/unit/embedding/: test_adapter.py  test_bge_m3.py
tests/unit/evaluation/: test_aggregator.py  test_display.py  test_pipeline.py  test_retriever.py  test_stance.py  test_synthesizer.py
tests/unit/ingestion/: test_chunker.py  test_filters.py  test_http_client.py  test_processor.py  test_reddit_adapter.py  test_scheduler.py  test_stats.py
tests/unit/llm/: test_anthropic.py  test_base.py  test_factory.py  test_openai_compat.py
tests/unit/models/: test_evaluation.py
tests/unit/storage/: test_lance.py  test_sqlite.py  test_unified.py
tests/unit/translation/: test_translator.py
