[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyporeddit-validator"
version = "0.1.0"
description = "Hypothesis validation against Reddit corpus"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "loguru>=0.7",
    "anthropic>=0.28",
    "openai>=1.0",
    "rich>=13.7",
    "numpy>=1.26",
    "lancedb>=0.10",
    "torch>=2.0",
    "pandas>=2.0",
    "FlagEmbedding>=1.2",
]

[project.scripts]
hyporeddit = "hyporeddit.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (require env vars)"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
